# Divert

./: .gitignore  CMakeLists.txt  mingw-build - Copy.sh  mingw-build.sh  notes.txt
cmake/Modules/: FindWDKold.cmake  TODO.cmake  WinDivertSummary.cmake
cmake/Scripts/: WinDivert.universal.props.in  WinDivert.vcxproj.filters.in  WinDivert.vcxproj.in
dll/: CMakeLists.txt
examples/: CMakeLists.txt
include/: windivert.h
inf/: windivert32.inf  windivertARM.inf  windivertARM64.inf
sys/: CMakeLists - Copy (2).txt  CMakeLists - Copy.txt  CMakeLists.txt
test/: CMakeLists.txt
